# writer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: architecture-optimizer.md
TODO/: 骨架命令.md
docs/:  技术架构细节.md  Claude-Code架构对比.md  命令与用户流程.md  技术架构总览.md  技术架构细节.md  设计文档.md
docs/bugs/: 01-tool-loop-not-rebound.md  02-action-answer-ignored-by-tool-loop.md  05-workflow-module-globals.md  (+3 more)
e2e/: AGENT.md  README.md
novel/: AGENT.md  README.md
scripts/: pyinstaller_entrypoint.py  pyinstaller_runtime_hook.py
tests/: conftest.py  test_agent_registry.py  test_architectures.py  test_cli.py  test_context.py  test_context_rag.py  test_continue_writing_skill.py  test_directive_discovery.py  test_directive_dispatch.py  test_directive_registry.py  test_engine.py  test_engine_deps.py  test_engine_session.py  test_entry_point_skills.py  test_explore.py  test_foreshadow_ledger.py  test_ideas.py  test_init_brief.py  test_llm_provider.py  test_llm_structured.py  test_llm_tool_loop.py  test_new_command.py  test_project_state.py  test_prompts_consultants.py  test_prompts_entry_points.py  test_prompts_genre_dispatch.py  test_prompts_registry.py  test_prompts_router.py  test_prose_llm.py  test_react_agent.py  test_repl_explore.py  test_revise_skill.py  test_roles.py  test_routing_llm.py  test_settings_env.py  test_shipped_directives.py  test_skeleton_chapters.py  test_skill_dispatch.py  test_skill_loader.py  test_skill_registry.py  (+9 more)
技术难点与解决方案备忘/: 01-项目状态机与命令可用性.md  02-正典文件与多源写入一致性.md  03-长篇上下文管理与RAG检索.md  04-LangGraph多阶段编排与子代理隔离.md  05-LLM提供商路由与流式输出.md  06-长任务质量控制与自动回流.md  07-工具注册与文件权限安全.md  08-REPL交互体验与命令解析.md  09-历史题材史实校验.md  10-伏笔生命周期与跨章节一致性.md  11-检查点恢复与可观测性.md  12-RAG与检索实现方案.md  13-核心Tool设计.md  14-LLM用户交互与REPL中断协议.md  15-LangChain前台调度Agent设计.md  16-Agent架构模式与本项目选型.md  17-七种系统编排方式与本项目落地映射.md  README.md
(+249 files in other folders)
