[project]
name = "writer-agent"
version = "0.1.0"
description = "长篇小说写作 Agent — CLI 工具,帮助用户快速生成 20-50 万字小说"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "writer-agent authors" }
]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint>=2.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "markdown-it-py>=3.0.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pyinstaller>=6.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML",
]

[project.scripts]
writer = "writer.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/writer"]
# Ship the SKILL.md directive packages under src/writer/skills/_shipped/
# so that ``importlib.resources.files("writer.skills._shipped")`` resolves
# both from source checkouts and from installed wheels.
artifacts = ["src/writer/skills/_shipped/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
files = ["src/writer"]
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
